# serial-usbipclient

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS  CHANGES  LICENSE  MANIFEST.in  README.md  performance_stats.py  pull_request_template.md  pyproject.toml  requirements.in  requirements.txt  run_pytest.sh  setup.cfg  setup.py  tool_requirements.txt  usb_descriptors.py  usbip.py  usbip_client.py  usbip_defs.py  usbip_protocol.py  version.py
.github/workflows/: poetry-build.yml  python-app.yml
protocol/: packets.py  urb_packets.py
serial-usbipclient/: usbip_defs.py
serial-usbipclient/protocol/: urb_packets.py  usbip_defs.py  usbip_protocol.py
serial-usbipclient/tests/: common_test_base.py  list_of_tests.json  mock_usbip.py
serial_usbipclient/: __init__.py  socket_wrapper.py  usbip_client.py  version.py
serial_usbipclient/protocol/: packets.py  urb_packets.py  usb_descriptors.py  usbip_defs.py  usbip_protocol.py
serial_usbipclient/tests/: 1-3.lsusb  99-99.lsusb  common_test_base.py  conftest.py  list_of_tests.json  mock_usbip.py  test_connection.py  test_defs.py  test_descriptors.py  test_exceptions.py  test_mock_usbip_server.py  test_packaging.py  test_packet_generation.py  test_rw_device.py  test_socket_handling.py  test_stats.py  test_urb_packets.py  usbip_packets.json
tests/: 1F461B01.lsusb  common_test_base.py  conftest.py  list_of_tests.json  mock_usbip.py  setup_testing.py  test_base.py  test_connection.py  test_defs.py  test_descriptors.py  test_mock_usbip_server.py  test_packet_generation.py  test_rw_device.py  test_stats.py  test_urb_packets.py  test_usbip_packets.py  usbip_packets.json
