[metadata]
name = serial-usbipclient
author = Harry Collins
author_email = bp100a@gmail.com
license = BSD
description = Simple serial connectivity to CDC (serial) USB devices exposed by a USBIPD service.
description_content_type=text
long_description = file: README.md
long_description_content_type=text/markdown; charset=UTF-8; variant=GFM
keywords = usb, usbipd, serial
url = https://github.com/bp100a/serial-usbipclient
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Natural Language :: English
    Topic :: Text Processing :: Markup :: HTML
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Communications Device Class (CDC)
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages=find:
zip_safe = True
include_package_data = True
python_requires = >=3.11
install_requires =
    py-datastruct >= 1.0.0
setup_requires = setuptools; setuptools_scm
test_suite = serial-usbipclient.tests


[options.packages.find]
where = serial_usbipclient
include =
    serial_usbipclient*
excluded =
    serial_usbipclient.tests*

[options.extras_require]
test = pytest; pytest-cov

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build

[tool:pytest]
minversion = 8.3
addopts = --pyargs

[isort]
default_section=THIRDPARTY
known_first_party=serial-usbipclient
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[zest.releaser]
python-file-with-version = version.py
